@@ -19,33 +19,6 @@
     <formatter.basedir>${project.parent.basedir}</formatter.basedir>
   </properties>
 
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <configuration>
-          <compilerArgs>
-            <!-- Allow reading all unnamed modules for JSONAssert -->
-            <arg>--add-reads</arg>
-            <arg>com.vaadin.hilla.parser.testutils=ALL-UNNAMED</arg>
-          </compilerArgs>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-javadoc-plugin</artifactId>
-        <configuration>
-          <additionalJOptions>
-            <!-- Allow reading all unnamed modules for JSONAssert -->
-            <additionalJOption>--add-reads</additionalJOption>
-            <additionalJOption>com.vaadin.hilla.parser.testutils=ALL-UNNAMED</additionalJOption>
-          </additionalJOptions>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
-
   <dependencies>
     <dependency>
       <groupId>org.junit.jupiter</groupId>
